src/components/Projects/styles/Pass.scss
@import "../../../styles/fonts.scss";

.pass {
  // position: absolute;
  top: 110vh;
  left: 10vw;
  width: 40vw;
  height: 80vh;
  background-color: rgb(255, 175, 4);
  // border-radius: 5rem;
  // border-radius: 50px;
  background: #ffaf04;
  box-shadow: inset 8px 8px 11px #e69e04, inset -8px -8px 11px #ffc104;
  .app-icon {
    // height: 75px;
    // width: 75px;
    // background-position: center;
    // background-size: cover;
    // background-repeat: no-repeat;
    // border-radius: 25rem;
    // margin-top: 1rem;
    background-image: url(../../../assets/passthespatula.png);
  }
  .card-body {
    // .project-icons {
    //   position: absolute;
    //   left: 50%;
    // }
    // .project-icons svg {
    //   width: 125px;
    //   height: 125px;
    // }
    // .project-icons img {
    //   width: 125px;
    //   height: 125px;
    // }
    //REACT
    .project-icons-1 {
      position: absolute;
      transform: translate(15vw, -20vh);
    }
    //FIREBASE
    .project-icons-2 {
      position: absolute;
      transform: translate(-25vw, -10vh);
    }
    //SHOPIFY
    .project-icons-3 {
      position: absolute;
      transform: translate(15vw, 45vh);
    }
    //DRAFTJS
    .project-icons-4 {
      position: absolute;
      transform: translate(-22vw, 30vh);
    }
    //SASS
    .project-icons-5 {
      position: absolute;
      transform: translate(15vw, 20vh);
    }
    .project-description {
      position: relative;
      width: 50%;
      margin: 0 auto;
      text-align: justify;
      p {
        font-size: 1.5vw;
        font-family: PangramMedium;
      }
    }
  }
}

@media (max-width: 768px) {
  .pass {
    top: 102vh;
    left: 5vw;
    width: 90vw !important;
    // height: 80vh;
    .card-body {
      // .project-icons svg {
      //   width: 15vh;
      //   height: 15vw;
      // }
      // .project-icons img {
      //   width: 75px;
      //   height: 75px;
      // }
      //REACT
      .project-icons-1 {
        transform: translate(35vw, -20vh);
      }
      //FIREBASE
      .project-icons-2 {
        transform: translate(-50vw, -10vh);
      }
      //SHOPIFY
      .project-icons-3 {
        transform: translate(35vw, 50vh);
      }
      //DRAFTJS
      .project-icons-4 {
        transform: translate(-50vw, 30vh);
      }
      //SASS
      .project-icons-5 {
        transform: translate(35vw, 15vh);
      }
      .project-description {
        width: 60%;
        p {
          font-size: 4.5vw;
        }
      }
    }
  }
}

